# Epigame

./: .gitignore  .gitmodules  CMakeLists.txt  InputsConfig.yaml  README.md  liste paramètres
.github/workflows/: cmake.yml
graphDemoScene/: CMakeLists.txt
graphDemoScene/src/: CMakeLists.txt  main.cpp
include/: Command.hpp  ErrorTracking.hpp  Game.hpp  InputEvent.hpp  InputKey.hpp  Inputs.hpp  Logger.hpp  System.hpp  TestWindow.hpp
include/Inputs/: DataContainer.hpp  InputEnums.hpp  InputEvent.hpp  InputManager.hpp  Inputs.hpp  InputsManager.hpp
include/Utils/: DataContainer.hpp  LehmerRandom.hpp  StringHelper.hpp
include/gameplay/: GameScene.hpp
include/generation/: BaseRandom.hpp  CelestialBody.hpp  Galaxy.hpp  LocalCoordinates.hpp  Moon.hpp  Planet.hpp  SolarSystem.hpp  Star.hpp  Sun.hpp  UniversalPosition.hpp  Universe.hpp
include/inputs/: InputEvent.hpp  InputManager.hpp
include/scene/: Scene.hpp  SceneStateMachine.hpp
include/utils/: Command.hpp  FNV1Hash.hpp  LehmerRandom.hpp
lib/: CMakeLists.txt
lib/graphical/: CMakeLists.txt
lib/graphical/include/: Buffer.hpp  ErrorTracking.hpp  GBuffer.hpp  Graphics.hpp  LogicalDevice.hpp  PhysicalDevice.hpp  Pipeline.hpp  QueueFamilyIndices.hpp  RenderPass.hpp  Shapes.hpp  ShapesManager.hpp  SwapChain.hpp  SwapChainSupportDetails.hpp  Uniform3d.hpp  ValidationLayer.hpp  Vertex.hpp  VkConfigConstants.hpp  VulkanInstance.hpp  WindowHandler.hpp  graphRender.hpp
lib/graphical/include/Shapes/: CircleShape.hpp  RectangleShape.hpp  ShapeBase.hpp
lib/graphical/shaders/: base.vert
lib/graphical/src/: Buffer.cpp  CMakeLists.txt  CircleShape.cpp  GBuffer.cpp  GraphicalInterface.cpp  Graphics.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  Pipeline.cpp  QueueFamilyIndices.cpp  RectangleShape.cpp  RenderPass.cpp  ShapeBase.cpp  ShapesManager.cpp  SwapChain.cpp  SwapChainSupportDetails.cpp  ValidationLayer.cpp  Vertex.cpp  VkConfigConstants.cpp  VulkanInstance.cpp  WindowHandler.cpp
lib/system/: CMakeLists.txt
src/: CMakeLists.txt  Game.cpp  Inputs.cpp  Logger.cpp  Logger.hpp  System.cpp  TestWindow.cpp  main.cpp  main_test_input.cpp
src/Inputs/: CMakeLists.txt  DataContainer.cpp  InputAction.cpp  InputEnums.cpp  InputEvent.cpp  InputManager.cpp  Inputs.cpp  InputsManager.cpp
src/Utils/: CMakeLists.txt  DataContainer.cpp  Dictionary.cpp  FNV1Hash.cpp  LehmerRandom.cpp  StringHelper.cpp
src/gameplay/: CMakeLists.txt  GameScene.cpp
src/generation/: BaseRandom.cpp  CMakeLists.txt  CelestialBody.cpp  Galaxy.cpp  Moon.cpp  Planet.cpp  SolarSystem.cpp  Star.cpp  (+3 more)
srcThibault/: InputsConfig.yaml  main.cpp
ui-conception/: epigames-ui-ideas.drawio  settings-list.yaml
(+25 files in other folders)
